# GeneralQBOT

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE.md  README.md  main.py  pyproject.toml  requirements.txt
.github/: pytest.yaml
.github/ISSUE_TEMPLATE/: 新功能.md
.github/workflows/: after_push.yaml  codeql.yml  pytest.yaml
configs/: config.py  config.template.py  cookies.json  feature.py  pictures.py
docs/: General QBOT 架构图.xmind
handlers/: __init__.py  anti_flippedscreen.py  cgpt.py  group_wordcloud.py  integral.py  join_group.py  tms.py
handlers/ai_features/: fake_lovers.py
handlers/games/: __init__.py  guess_numbers.py
handlers/interview/: __init__.py
handlers/pixiv/: __init__.py  listener.py  manager.py  searcher.py
manager/: __init__.py  messages.py
models/tms.tf/: saved_model.pb
models/tms.tf/variables/: variables.index
resources/: stop_words.txt
tests/: test_afc.py  test_cgpt.py  test_fake_db.py  test_message_chain.py  test_tms.py
utils/: __init__.py  database.py  logger.py  message_chain.py  token.py
